preemptive check for duplicated CustomID